User johns
Date:

    Fix bug: mpeg stills not displayed.
    Detect audio stream type only after stream switch.
    Detect more h264 streams with leading zeros.
    VDPAU: support for studio levels added.
    Add support for skip chroma deinterlace to software deinterlacer.
    Type of software deinterlacer now configurable from setup menu.
    Mixer channel could be set through command line option.
    Fix bug: LFE moved to wrong position.
    Guard suspend/resume against multiple calls.
    Add support for AAC LATM audio streams.
    Fix bug: alsa and ffmpeg use different channel layout.
    Support more LPCM sample rates and number of channels.
    Quick&dirty support for mpeg LPCM streams.
    Workaround for text2skin undrawn OSD areas.
    Detect dvb LPCM stream and ignore it.

User johns
Date: Thu Feb  2 23:29:35 CET 2012

    Release Version 0.4.6
    Warn only on the first duplicated frame in sequence.
    Increase audio buffer, if bigger audio delay is used.
    Makes SkipLines configure in setup menu.
    Auto-crop only enabled with normal 4:3 display mode.
    Vaapi updates OSD when cropping changes.
    Add A-V info output and compile time option.
    Fix bug: VA-API intel software decoder broken by aspect commit.
    Add support for 4:3 output modes.
    Quicker auto-crop after channel switch.
    Add auto-crop support for Intel VA-API backend.
    Fix bug: Auto-Crop logo skip didn't use displayed width.
    Workaround for mpeg2 FFMpeg + VA-API + Intel GPU hung.
    Fix bug: Missing vaSyncSurface and vaDestroyImage.
    Fix bug: Only black picture with VA-API hw decoder.

User HelAu
Date: Mon Jan 30 16:54:47 CET 2012

    Add support to start the plugin in suspended mode.

User johns
Date: Mon Jan 30 15:58:21 CET 2012

    Finished rewrite of video code, to support output modules.
    Add aspect change support to software decoder path.
    Repair software decoder with vaapi vdpau backend.
    Add workaround for Intel VA-API MPEG GPU hung.

User johns